# letsjit

./: CMakeLists.txt  README.md
include/: letsjit.hpp
include/ast/: compiled_value.hpp  typeinfo.hpp
include/ast/expressions/: arithmeric_op.hpp  expression.hpp  field_access.hpp  function_arg_access.hpp  function_call.hpp  number.hpp  pointer.hpp  ternary.hpp
include/ast/instructions/: condition.hpp  function_definition.hpp  instruction.hpp  return.hpp  sequence.hpp
include/ast/nodes/: arithmetic_op.hpp  condition.hpp  field_access_node.hpp  function.hpp  function_arg.hpp  function_call.hpp  node.hpp  number.hpp  return.hpp  sequence.hpp  ternary_node.hpp
include/ast/types/: function_declaration.hpp  struct_declaration.hpp  typeinfo.hpp  types_context.hpp  types_context_fwd.hpp
include/compilation/: context.hpp  context_fwd.hpp
src/ast/: arithmetic_op.cpp  compiled_value.cpp  expression.cpp  field_access.cpp  function_arg_access.cpp  function_call.cpp  function_definition.cpp  number.cpp  ternary.cpp
src/ast/instructions/: condition.cpp  return.cpp  sequence.cpp
src/compilation/: context.cpp
src/nodes/: arithmetic_op_node.cpp  field_access_node.cpp  function_arg_node.cpp  node.cpp  return_node.cpp  ternary_node.cpp
src/types/: function_declaration.cpp  typeinfo.cpp  types_context.cpp
tests/: compilation_test.cpp  simple_expr.cpp
